--- a/gallery-paint-3d-3.html
+++ b/gallery-paint-3d-3.html
@@ -187,6 +187,9 @@
       <a href="img/modelo-humano.jpg">
         <img alt=".." src="img/modelo-humano.jpg" />
       </a>
+      <a href="img/zack.jpg">
+        <img alt=".." src="img/zack.jpg" />
+      </a>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
