--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@
       animation-fill-mode: forwards;
       color: white;
       font-size: 20px;
+      text-align: center;
+    }
+    #hide-me p {
+      padding-top: 1rem;
     }
 
     .containerpre,
@@ -415,6 +419,8 @@
       Mi portafolio esta cargando, para una mejor experiencia miralo en
       computador
     </p>
+    <!-- <a href="#">English portfolio</a> -->
+
     <div class="containerpre">
       <div class="dot-container">
         <div class="dot"></div>
@@ -520,7 +526,7 @@
                   class="dropdown-item"
                   href="portafoliorodrigo-copia.html#spline62"
                   target="_blank"
-                  >Animacion</a
+                  >Animación</a
                 >
 
                 <a
@@ -1094,9 +1100,8 @@
           <p>
             Las siguientes imágenes han sido modificadas mediante la aplicación
             de ajustes, filtros, selecciones, transformaciones e implementación
-            de texto con la aplicación de Photoshop. A continuación puedes ver
-            un carousel con mis mejores trabajos y seguido a este todos los
-            trabajos por secciones.
+            de texto con la aplicación de Photoshop. A continuación mis trabajos
+            por secciones.
           </p>
         </div>
       </div>
@@ -1183,7 +1188,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4>Retículas para logo - Krart ken studios</h4>
-                  <p>Propuestas para elección de logo de proyecto</p>
+                  <p>Propuestas para elección de logo de proyecto grupal</p>
                 </div>
               </div>
             </div>
@@ -1201,8 +1206,8 @@
                   <!-- <a href="./portfolio-details.html" title="More Details" target="_blank"><i class="icofont-link"></i></a> -->
                 </div>
                 <div class="portfolio-info">
-                  <h4>Retículas para logo - Krart ken studios</h4>
-                  <p>Propuestas para elección de logo de proyecto</p>
+                  <h4>Imagotipo Gonzál</h4>
+                  <p>Imagotipo realizado para una marca de jabón</p>
                 </div>
               </div>
             </div>
@@ -1358,8 +1363,8 @@
                   <!-- <a href="./portfolio-details.html" title="More Details" target="_blank"><i class="icofont-link"></i></a> -->
                 </div>
                 <div class="portfolio-info">
-                  <h4>Poster de película "Premonición"</h4>
-                  <p>Elemento realizado con photoshop e illustrator</p>
+                  <h4>Diseño etiqueta Gonzál"</h4>
+                  <p>Diseño de etiqueta realizado para un frasco de jabón</p>
                 </div>
               </div>
             </div>
@@ -2059,40 +2064,15 @@
                   <!-- <a href="./portfolio-details.html" title="More Details" target="_blank"><i class="icofont-link"></i></a> -->
                 </div>
                 <div class="portfolio-info">
-                  <h4>Render logo</h4>
+                  <h4>Render Pera in love</h4>
                   <p>
-                    Elemento en 3d hecho en blender con algunos elementos de
-                    luces de neón
+                    Render hecho en Illustrator para envio a Registro sanitario
+                    de Perú o Republica Dominicana
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 portfolio-item filter-renders">
-              <div class="portfolio-wrap">
-                <img
-                  src="img/FORMATO RENDERS-05.png"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-links">
-                  <a
-                    href="img/FORMATO RENDERS-02.jpg"
-                    data-gall="portfolioGallery"
-                    class="venobox"
-                    title="Card 1"
-                    ><i class="icofont-plus-circle"></i
-                  ></a>
-                  <!-- <a href="./portfolio-details.html" title="More Details" target="_blank"><i class="icofont-link"></i></a> -->
-                </div>
-                <div class="portfolio-info">
-                  <h4>Render logo</h4>
-                  <p>
-                    Elemento en 3d hecho en blender con algunos elementos de
-                    luces de neón
-                  </p>
-                </div>
-              </div>
-            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-renders">
               <div class="portfolio-wrap">
                 <img
@@ -2111,36 +2091,10 @@
                   <!-- <a href="./portfolio-details.html" title="More Details" target="_blank"><i class="icofont-link"></i></a> -->
                 </div>
                 <div class="portfolio-info">
-                  <h4>Render logo</h4>
+                  <h4>Render loción ENERGY</h4>
                   <p>
-                    Elemento en 3d hecho en blender con algunos elementos de
-                    luces de neón
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 portfolio-item filter-renders">
-              <div class="portfolio-wrap">
-                <img
-                  src="img/FORMATO RENDERS-07.png"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-links">
-                  <a
-                    href="img/FORMATO RENDERS-04.jpg"
-                    data-gall="portfolioGallery"
-                    class="venobox"
-                    title="Card 1"
-                    ><i class="icofont-plus-circle"></i
-                  ></a>
-                  <!-- <a href="./portfolio-details.html" title="More Details" target="_blank"><i class="icofont-link"></i></a> -->
-                </div>
-                <div class="portfolio-info">
-                  <h4>Render logo</h4>
-                  <p>
-                    Elemento en 3d hecho en blender con algunos elementos de
-                    luces de neón
+                    Render hecho en Illustrator para envio a Registro sanitario
+                    de Perú o Republica Dominicana
                   </p>
                 </div>
               </div>
@@ -2163,40 +2117,15 @@
                   <!-- <a href="./portfolio-details.html" title="More Details" target="_blank"><i class="icofont-link"></i></a> -->
                 </div>
                 <div class="portfolio-info">
-                  <h4>Render logo</h4>
+                  <h4>Render empaque ENERGY</h4>
                   <p>
-                    Elemento en 3d hecho en blender con algunos elementos de
-                    luces de neón
+                    Render hecho en Illustrator para envio a Registro sanitario
+                    de Perú o Republica Dominicana
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 portfolio-item filter-renders">
-              <div class="portfolio-wrap">
-                <img
-                  src="img/FORMATO RENDERS-09.png"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-links">
-                  <a
-                    href="img/FORMATO RENDERS-06.jpg"
-                    data-gall="portfolioGallery"
-                    class="venobox"
-                    title="Card 1"
-                    ><i class="icofont-plus-circle"></i
-                  ></a>
-                  <!-- <a href="./portfolio-details.html" title="More Details" target="_blank"><i class="icofont-link"></i></a> -->
-                </div>
-                <div class="portfolio-info">
-                  <h4>Render logo</h4>
-                  <p>
-                    Elemento en 3d hecho en blender con algunos elementos de
-                    luces de neón
-                  </p>
-                </div>
-              </div>
-            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-renders">
               <div class="portfolio-wrap">
                 <img
@@ -2215,10 +2144,10 @@
                   <!-- <a href="./portfolio-details.html" title="More Details" target="_blank"><i class="icofont-link"></i></a> -->
                 </div>
                 <div class="portfolio-info">
-                  <h4>Render logo</h4>
+                  <h4>Render empaque loción facial ESSENTIAL</h4>
                   <p>
-                    Elemento en 3d hecho en blender con algunos elementos de
-                    luces de neón
+                    Render hecho en Illustrator para envio a Registro sanitario
+                    de Perú o Republica Dominicana
                   </p>
                 </div>
               </div>
@@ -2241,10 +2170,10 @@
                   <!-- <a href="./portfolio-details.html" title="More Details" target="_blank"><i class="icofont-link"></i></a> -->
                 </div>
                 <div class="portfolio-info">
-                  <h4>Render logo</h4>
+                  <h4>Render perfume LIVE ADVENTURE</h4>
                   <p>
-                    Elemento en 3d hecho en blender con algunos elementos de
-                    luces de neón
+                    Render hecho en Illustrator para envio a Registro sanitario
+                    de Perú o Republica Dominicana
                   </p>
                 </div>
               </div>
@@ -2268,10 +2197,10 @@
                   <!-- <a href="./portfolio-details.html" title="More Details" target="_blank"><i class="icofont-link"></i></a> -->
                 </div>
                 <div class="portfolio-info">
-                  <h4>Render logo</h4>
+                  <h4>Render empaque perfume LIVE ADVENTURE</h4>
                   <p>
-                    Elemento en 3d hecho en blender con algunos elementos de
-                    luces de neón
+                    Render hecho en Illustrator para envio a Registro sanitario
+                    de Perú o Republica Dominicana
                   </p>
                 </div>
               </div>
@@ -2294,10 +2223,10 @@
                   <!-- <a href="./portfolio-details.html" title="More Details" target="_blank"><i class="icofont-link"></i></a> -->
                 </div>
                 <div class="portfolio-info">
-                  <h4>Render logo</h4>
+                  <h4>Render perfume LIVE ADVENTURE</h4>
                   <p>
-                    Elemento en 3d hecho en blender con algunos elementos de
-                    luces de neón
+                    Render hecho en Illustrator para envio a Registro sanitario
+                    de Perú o Republica Dominicana
                   </p>
                 </div>
               </div>
@@ -2349,7 +2278,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12 col-md-12 footer-links">
-              <h4>Mis redes sociales</h4>
+              <h4>Mis redes sociales y hoja de vida</h4>
               <!-- <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p> -->
               <div class="social-links mt-3">
                 <!-- <a href="https://www.pinterest.at/rodrigoandresgm20/_saved/" target="_blank" class="twitter"><i class="bx bxl-pinterest"></i></a> -->
@@ -2361,8 +2290,14 @@
                   class="instagram"
                   ><i class="bx bxl-instagram"></i
                 ></a>
-                <!-- <a href="https://www.behance.net/rodrigoguzman7" target="_blank" class="artstation"><i class="bx 	
-bxl-behance"></i></a> -->
+
+                <a
+                  href="https://drive.google.com/file/d/11XNpVgPX8WapZECiv7cx8NzncEnDfAvs/view?usp=share_link"
+                  target="_blank"
+                  class="artstation"
+                >
+                  <i class="fa-solid fa-user"></i>
+                </a>
                 <!-- <a href="https://www.linkedin.com/in/andr%C3%A9s-guzman-5043371a8/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
 
                 <div id="whatsapp">
