--- a/portafoliorodrigo-copia-2.html
+++ b/portafoliorodrigo-copia-2.html
@@ -61,6 +61,10 @@
         animation-fill-mode: forwards;
         color: white;
         font-size: 20px;
+        text-align: center;
+    }
+    #hide-me a {
+      padding-top: 3rem;
     }
     
     .containerpre,
@@ -193,6 +197,9 @@
 
 <div id="hide-me">
     <!-- <p>Mi portafolio esta cargando, para una mejor experiencia miralo en computador</p> -->
+    <p> </p>
+    <!-- <a href="#">English portfolio</a> -->
+
     <div class="containerpre">
         <div class="dot-container">
             <div class="dot"></div>
@@ -891,7 +898,28 @@
                             <!-- <a href="https://www.pinterest.at/rodrigoandresgm20/_saved/" target="_blank" class="twitter"><i class="bx bxl-pinterest"></i></a> -->
                             <!-- <a href="https://www.deviantart.com/ragm924" target="_blank" class="facebook"><i class="bx 	
                                 bxl-deviantart"></i></a> -->
-                            <a href="https://www.instagram.com/ray.art_/?hl=es-la" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+                                <a
+                  href="https://www.instagram.com/ray.art_/?hl=es-la"
+                  target="_blank"
+                  class="instagram"
+                  ><i class="bx bxl-instagram"></i
+                ></a>
+
+
+                <a
+                href="https://drive.google.com/file/d/11XNpVgPX8WapZECiv7cx8NzncEnDfAvs/view?usp=share_link"
+                target="_blank"
+                class="instagram"
+                ><i class="bx bxl-doc"></i
+              ></a>
+
+              <a
+              href="https://drive.google.com/file/d/11XNpVgPX8WapZECiv7cx8NzncEnDfAvs/view?usp=share_link"
+              target="_blank"
+              class="artstation"
+            >
+              <i class="fa-solid fa-user"></i>
+            </a>
                             <!-- <a href="https://www.behance.net/rodrigoguzman7" target="_blank" class="artstation"><i class="bx 	
 bxl-behance"></i></a> -->
                             <!-- <a href="https://www.linkedin.com/in/andr%C3%A9s-guzman-5043371a8/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
