--- a/gallery-paint-3d-2.html
+++ b/gallery-paint-3d-2.html
@@ -240,6 +240,9 @@
         <a href="img/modelo-humano.jpg">
           <img alt=".." src="img/modelo-humano.jpg" />
         </a>
+        <a href="img/zack.jpg">
+          <img alt=".." src="img/zack.jpg" />
+        </a>
       </div>
     </div>
 
