--- a/portafoliorodrigo-copia.html
+++ b/portafoliorodrigo-copia.html
@@ -900,13 +900,13 @@
                                 <div class="face face1">
                                     <div class="content">
                                         <img src="img/sitio-web.png" alt="">
-                                        <h3>Hobbies</h3>
+                                        <h3>Bootstrap</h3>
                                     </div>
                                 </div>
                                 <div class="face face2">
                                     <div class="content">
-                                        Esta es mi página personal de mis hobbies favoritos <br>
-                                        <a href="https://ragmartgltc.github.io/Dibujo/" target="_blank">Hobbies</a>
+                                     Esta pagina fue realizada con la intención de aprender bootstrap y sus componentes<br>
+                                        <a href="https://learninbootstrap.000webhostapp.com/" target="_blank">Bootstrap</a>
                                     </div>
 
                                 </div>
@@ -950,8 +950,8 @@
                                 </div>
                                 <div class="face face2">
                                     <div class="content">
-                                        Pagina realizada con html, sass y javascript <br>
-                                        <a href="#" target="_blank">Festival musica </a>
+                                        Pagina realizada con html, gulp, sass y javascript <br>
+                                        <a href="https://ragmartgltc.github.io/Festivalmusica/" target="_blank">Festival musica </a>
 
                                     </div>
                                 </div>
@@ -969,7 +969,7 @@
                                 </div>
                                 <div class="face face2">
                                     <div class="content">
-                                       Esta pagina fue realizada en wix. Es una pagina de un webcomic que ha sido escrito y dibujado por mi<br>
+                                       Esta pagina fue realizada en wix. Es una pagina de un webcomic que esta siendo escrito y dibujado por mi<br>
                                         <a href="https://rodrigoandresgm20.wixsite.com/next-wars" target="_blank">Wix</a>
                                     </div>
 
@@ -987,8 +987,8 @@
                                 </div>
                                 <div class="face face2">
                                     <div class="content">
-                                        Pagina realizada en wordpress<br>
-                                        <a href="#" target="_blank">Krart-Ken Studios </a>
+                                        Pagina realizada en wordpress con elementor de una tienda online<br>
+                                        <a href="https://intelligent-buccaneer.localsite.io/" target="_blank">R G productions </a>
 
                                     </div>
                                 </div>
